refactor: move JsonUtil dependency to AbstractImporter only (#74)